test/fixture/invalid/const.scrypt
contract ConstContract {


  public function add(int y) {

    const int N = 3;

    loop(N) {

    }

    int[N] array = [1,3,3];

    require(y > 0);
    
  }
}